--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,14 @@
 database_path=localhost:5432
 connected_db_name=web_scrape
 connected_db_username=postgres
-connected_db_password=postgres
+connected_db_password=123456
 
+server.port=9222
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/web_scrape
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
